# wechat-minapp

./: .env.example  .gitignore  Cargo.toml  README.md
crates/wechat-core/: Cargo.toml  README.md
crates/wechat-core/src/: constants.rs  error.rs  lib.rs
crates/wechat-core/src/client/: access_token.rs  mod.rs  token_storage.rs  token_type.rs
crates/wechat-core/src/utils/: crypto.rs  http.rs  mod.rs
crates/wechat-minapp/: Cargo.toml  README.md
crates/wechat-minapp/src/: constants.rs  lib.rs
crates/wechat-minapp/src/link/: mod.rs  short_link.rs
crates/wechat-minapp/src/minapp_security/: mod.rs  msg_sec_check.rs
crates/wechat-minapp/src/new_type/: mod.rs  non_query_page_path.rs  page_path.rs  scene.rs
crates/wechat-minapp/src/qr/: minapp_code.rs  mod.rs  unlimited_minapp_code.rs
crates/wechat-minapp/src/template_message/: mod.rs  send_message.rs
crates/wechat-minapp/src/user/: credential.rs  mod.rs  user_info.rs
crates/wechat-minapp/src/utils/: mod.rs
crates/wechat-minapp/tests/: access_token.rs  mod.rs  msg_sec_check.rs  qr_code.rs  short_link.rs  template_message.rs  unlimited_qr_code.rs
crates/wechatmp/: Cargo.toml  README.md
crates/wechatmp/src/: constants.rs  lib.rs
crates/wechatmp/src/mp_message/: autoreply.rs  mass_message.rs  mod.rs  send_message.rs  subscribe_notify.rs  template.rs
crates/wechatmp/tests/: mod.rs  template_message.rs
crawler/: Cargo.toml
crawler/src/: cli.rs  lib.rs  main.rs  utils.rs
docs/minapp/: apis.md
docs/minapp/B2b门店助手/: 上传商户图片.md  全量授权门店查询.md  关闭订单.md  删除分账方.md  发起手动提现.md  商户号进件.md  完成分账.md  开通流程.md  微信支付自动提现接口.md  报名微信支付技术服务费优惠活动.md  报名银行转账技术服务费优惠活动.md  接口下载交易账单与资金账单.md  查询分账剩余金额.md  查询分账回退结果.md  查询分账方.md  查询分账结果.md  查询商户号开通状态.md  查询提现状态.md  查询订单.md  查询账户余额.md  查询退款.md  查询银行转账的技术服务费率.md  模板消息列表及下发.md  消息效果数据.md  添加分账方.md  申请开通银行转账.md  获取密钥AppKey.md  获取小程序下所有商户的信息.md  请求分账.md  请求分账回退.md  跳转银行转账页面.md  退款.md  门店信息查询.md  预录入门店信息.md
docs/minapp/openApi管理/: 使用AppSecret重置API调用次数.md  查询API调用额度.md  查询rid信息.md  网络通信检测.md  获取微信API服务器IP.md  获取微信推送服务器IP.md  重置API调用次数.md  重置指定API调用次数.md
docs/minapp/云开发/: 云开发上报接口.md  创建发短信任务.md  删除文件.md  删除集合.md  发送短信.md  发送短信v2.md  延时调用云函数.md  描述扩展上传文件信息.md  数据库删除记录.md  数据库导入.md  数据库导出.md  数据库插入记录.md  数据库更新记录.md  数据库查询记录.md  数据库聚合.md  数据库迁移状态查询.md  新增集合.md  更新数据库索引.md  查询短信记录.md  统计集合记录数.md  获取cloudID对应的数据.md  获取云开发数据.md  获取实时语音签名.md  获取文件上传链接.md  获取文件下载链接.md  获取腾讯云API调用凭证.md  获取集合信息.md  触发云函数.md
docs/minapp/交易保障/: 创建回复.md  创建评论.md  删除回复.md  删除评论.md  商家回应投诉.md  商家提交退款凭证.md  商家申诉.md  商家补充凭证.md  查询投诉单详情.md  查询评价列表.md  查询评价详情.md  查询评论列表.md  确认和解.md  获取交易保障标状态.md  获取小程序交易体验分违规记录.md  重置Api客服quota.md
docs/minapp/付费管理/: 查询购买资源包的用量情况.md  获取小程序某个付费能力的最近用量数据.md
docs/minapp/即时配送/: 发起绑定请求.md  取消配送单.md  异常件退回商家确认.md  拉取已绑定账号.md  拉取配送单信息.md  更新配送单状态.md  模拟更新配送单状态.md  模拟配送公司更新配送单状态.md  添加小费.md  添加配送单.md  申请开通即时配送.md  获取已支持的配送公司列表.md  重新下单.md  预下配送单.md  预取消配送单.md
docs/minapp/图像处理与文字识别/: 二维码、条码识别.md  图片智能裁剪.md  图片高清化.md  营业执照识别.md  行驶证识别.md  身份证识别.md  通用印刷体识别.md  银行卡识别.md  驾驶证识别.md
docs/minapp/城市服务/: 仿原生跳转.md  公告草稿预览设置.md  查询所有公告.md  查询用户实名API.md  查询用户是否开通.md  校验实名信息.md  正式发布公告.md  消息推送接口.md  消息通路发消息.md  添加公告草稿.md  获取城市服务限定页面链接.md
docs/minapp/小程序交易管理服务/: 发货信息合单录入.md  发货信息录入.md  品牌申请.md  小程序交易类型变更申请.md  小程序品牌申请状态查询.md  查询小程序是否已完成交易结算管理确认.md  查询小程序是否已开通发货信息管理服务.md  查询订单列表.md  查询订单发货状态.md  消息跳转路径设置.md  特殊发货报备.md  确认收货提醒.md
docs/minapp/小程序安全/: 多媒体内容安全识别.md  文本内容安全识别.md  获取用户安全等级.md
docs/minapp/小程序客服/: 删除客服账号.md  发送客服消息.md  取消客服管理员.md  客服子商户创建商户.md  客服子商户拉取单个商户信息.md  客服子商户拉取多个商户信息.md  客服子商户更新商户信息.md  客服输入状态.md  新增临时素材.md  添加客服账号.md  获取临时素材.md  获取在线客服列表.md  获取所有客服账号.md  设置客服管理员.md
docs/minapp/小程序登录/: 小程序登录凭证校验.md  检验登录态.md  重置登录态.md
docs/minapp/小程序直播/: 上下架商品.md  下载商品讲解视频.md  修改主播副号.md  修改直播间小助手.md  创建直播间.md  删除主播副号.md  删除商品.md  删除直播间.md  删除直播间商品.md  删除直播间小助手.md  发送直播开始事件.md  回放功能管理.md  官方收录管理.md  客服功能管理.md  导入商品.md  推送商品.md  撤回商品审核.md  更新商品.md  查询成员列表.md  查询直播间小助手.md  添加主播副号.md  添加并提审商品.md  添加管理直播间小助手.md  直播挂件获取全局KEY.md  直播挂件设置全局KEY.md  直播间商品排序.md  禁言管理.md  移除成员角色.md  编辑直播间.md  获取主播副号.md  获取商品列表.md  获取商品的信息与审核状态.md  获取直播间分享二维码.md  获取直播间列表和回放.md  获取直播间推流地址.md  获取长期订阅用户.md  设置成员角色.md  重新提交商品审核.md
docs/minapp/小程序码与小程序链接/: 查询scheme码.md  获取NFC的小程序scheme.md  获取ShortLink.md  获取不限制的小程序码.md  获取加密scheme码.md  获取小程序二维码.md  获取小程序码.md
docs/minapp/小说作品管理/: 上传章节.md  作品提审.md  创建作品.md  删除作品.md  删除指定的授权关系.md  删除指定的账号授权关系.md  删除章节.md  批量上传章节.md  新增账号-小说授权.md  新增账号-账号授权.md  替换章节.md  查看主授权关系列表-查看被授权关系列表.md  查看账号主授权关系列表.md  编辑作品.md  获取作品信息.md  获取作品列表.md  获取章节信息.md  获取章节列表.md  读后推荐.md  调整章节相对顺序.md  调整章节顺序.md  预览设置修改.md  预览设置获取.md
docs/minapp/微信人脸核身/: 查询用户人脸核身真实验证结果.md  获取用户人脸核身会话唯一标识.md
docs/minapp/微信学生身份快速验证/: 快速获取学生身份.md
docs/minapp/微信客服/: 查询绑定情况.md  绑定微信客服.md  解除绑定微信客服.md
docs/minapp/微信搜一搜/: 搜一搜数据推送.md
docs/minapp/微信服务市场/: 异步获取处理数据.md  调用服务市场接口.md
docs/minapp/微信物流服务/: 传运单.md  充值保费退款.md  创建退货ID.md  创建配送单.md  创建门店.md  发货时投保.md  取消配送单.md  开通门店权限.md  拉取保单信息.md  拉取充值订单信息.md  拉取理赔摘要.md  推送已绑定物流轨迹信息.md  无忧退理赔.md  无忧退货.md  更新物品信息接口.md  更新物流信息.md  更新门店.md  查询开通状态.md  查询扣费主体.md  查询支持同城配送的城市.md  查询运单.md  查询运费.md  查询退货ID状态.md  查询配送单.md  查询门店.md  查运单.md  模拟回调接口.md  用户手机状态查询.md  申请支付.md  (+9 more)
docs/mp/: apis.md
examples/minapp/: .gitignore  app.wxss  constants.example.js
examples/server/: .env.example  Cargo.toml
examples/server/src/: dto.rs  error.rs  lib.rs  main.rs  routes.rs
src/: access_token.rs  client.rs  constants.rs  credential.rs  error.rs  lib.rs  qr_code.rs  user.rs  utils.rs
src/client/: access_token.rs  mod.rs  non_stable_token.rs  stable_token.rs  token_storage.rs  token_type.rs
src/link/: mod.rs  short_link.rs
src/minapp_security/: mod.rs  msg_sec_check.rs
src/mp_message/: mod.rs  send_message.rs
src/new_type/: mod.rs  non_query_page_path.rs  page_path.rs  scene.rs
src/qr/: minapp_code.rs  mod.rs  unlimited_minapp_code.rs
src/template_message/: mod.rs  send_message.rs
src/user/: credential.rs  mod.rs  user_info.rs
src/utils/: http.rs  mod.rs
tests/: access_token.rs  mod.rs  mp_message.rs  msg_sec_check.rs  qr_code.rs  short_link.rs  template_message.rs  unlimited_qr_code.rs
(+298 files in other folders)
