[workspace]
resolver = "2"
members = [
    "crates/wechat-core",
    "crates/wechat-minapp",
    "crates/wechatmp",
]


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
thiserror = "2.0.18"
serde_repr = "^0.1.19"
strum = { version = "0.28.0", features = ["derive"] }
http = "1.4.2"
url = "2.5.8"
wechat-core = { version = "1.0.4" }
wechat-minapp = { path = "crates/wechat-minapp", version = "4.0.1" }
wechatmp = { path = "crates/wechatmp", version = "1.0.1" }
