[package]
name = "wechat_api_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.13.4", features = ["json"] }
scraper = "0.27.0"
tokio = { version = "1.52.3", features = ["full"] }
chrono = "0.4.45"
clap = { version = "4.5.48", features = ["derive"] }

[profile.release]
opt-level = "z"      # 针对体积优化 (z = 压缩，s = 平衡)
lto = true           # 开启全局链接优化 (Link Time Optimization)
codegen-units = 1    # 减少并行编译单元，提升优化质量
panic = "abort"      # 发生 panic 时直接退出，不捕获回溯，大幅缩减代码量
strip = true         # 自动剥离符号表 (等同于手动运行 strip 命令)
debug = false        # 确保 release 模式下没有调试信息

# 针对频繁变动的依赖进行局部优化，平衡编译时间
[profile.dev]
opt-level = 0
debug = true
