[package]
name = "wechat-core"
version = "1.0.4"
edition = "2024"
authors = ["cc <i@artista.cc>"]
description = "微信小程序和服务号服务端API SDK - 核心功能"
license = "MIT"
homepage = "https://github.com/ikeeplearn/wechat-minapp"
repository = "https://github.com/ikeeplearn/wechat-minapp"
categories = ["asynchronous", "web-programming"]
keywords = ["minapp", "wechat"]

[dependencies]
http.workspace = true
url.workspace = true
serde_repr.workspace = true
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { version = "1.52.3", features = ["sync"] }
chrono = { version  = "0.4.45", features = ["serde"] }
reqwest = { version = "0.13.4", features = ["json"] }
async-trait = "0.1.89"
aes = "0.9.1"
base64 = "^0.22.1"
cbc = { version = "0.2.1", features = ["alloc"] }
hex = "0.4.3"
hmac = "0.13.0"
sha2 = "0.11.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
