[package]
name = "wechat-minapp"
version = "4.0.1"
edition = "2021"
authors = ["cc <i@artista.cc>"]
description = "微信小程序服务端API SDK"
license = "MIT"
homepage = "https://github.com/ikeeplearn/wechat-minapp"
repository = "https://github.com/ikeeplearn/wechat-minapp"
categories = ["asynchronous", "web-programming"]
keywords = ["minapp", "wechat"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde_repr.workspace = true
strum.workspace = true
url.workspace = true
http.workspace = true
wechat-core.workspace = true

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
