[package]
name = "wechatmp"
version = "1.1.2"
edition = "2024"
authors = ["cc <i@artista.cc>"]
description = "微信服务号服务端API SDK"
license = "MIT"
homepage = "https://github.com/ikeeplearn/wechat-minapp"
repository = "https://github.com/ikeeplearn/wechat-minapp"
categories = ["asynchronous", "web-programming"]
keywords = ["wechat", "mp", "official_account"]

[dependencies]
wechat-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
http.workspace = true

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.0", features = ["full"] }
