[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
wechat-minapp = "3"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.7"
anyhow = "1.0"
thiserror = "2"
chrono = { version  = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
dotenv = "0.15"
validator = { version = "0.20", features = ["derive"] }